Fix background for blockquote in dark mode

--- a/.lunet/css/main.scss
+++ b/.lunet/css/main.scss
@@ -535,6 +535,10 @@ img {
       color: white!important;
       background-color: #495057!important;
   }
+  blockquote {
+    background-color: #333!important;
+    color: #ccc!important;
+  }
 
   a
   {
